SPORT-153: add PlayerStats
