# app-service/controller/setup.go
@@ -34,4 +34,5 @@ func Setup(g *gin.RouterGroup, options ...c.Option) {
 	protected.GET("/team-info", TeamInfo)
 	protected.GET("/team-stats", TeamStats)
 	protected.GET("/player-info", PlayerInfo)
+	protected.GET("/player-stats", PlayerStats)
 }
